# cgpt-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
it-portfolio/: README.md
it-portfolio/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
it-portfolio/.github/workflows/: ci-powershell.yml  ci-python.yml
it-portfolio/orchestrator/: README.md
it-portfolio/orchestrator/samples/: new_hire.json
it-portfolio/orchestrator/scripts/: orchestrator.ps1
it-portfolio/orchestrator/src/: Orchestrator.Config.psd1  Orchestrator.psd1  Orchestrator.psm1
it-portfolio/orchestrator/tests/: Orchestrator.Tests.ps1
it-portfolio/runbook-executor/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  runbook.py
it-portfolio/runbook-executor/actions/: core.py  graph.py
it-portfolio/runbook-executor/runbooks/: compromised_user.yml
it-portfolio/runbook-executor/tests/: test_core.py
it-portfolio/ticket-bridge/: Dockerfile  README.md  app.py  config.sample.yml  requirements.txt
tests/: test_app.py
